# drenv

./: .gitignore  README.md  pyproject.toml
drenv/: drenv.py
drenv/resources/: Dockerfile  _container_setup.sh  activate  cleanup  delete_all_drenv_containers.sh  delete_all_drenv_images.sh  rebuild  run_cmd
test/: test_drenv.py
